--- a/testing purpose.ipynb
+++ b/testing purpose.ipynb
@@ -173,12 +173,12 @@
     "        return query_set\n",
     "\n",
     "class CustomPermission():\n",
-    "    def has_object_permission(self,request,view):\n",
+    "    def has_permission(self,request,view):\n",
     "        if fundamental().skip_check(view,request) in [True,False]:\n",
     "            return fundamental().skip_check(view,request) in [True,False]\n",
     "        try:\n",
     "            username=request.user.username\n",
-    "            module=vew.model\n",
+    "            module=view.model\n",
     "            method=request.method\n",
     "            module_id=fundamental().get_model_id(module)\n",
     "            method_dict={'GET':'read','POST':'create','PUT':'update','DELETE':'delete'}\n",
@@ -194,7 +194,7 @@
     "            return queryset(request.user.username,view.model).filter(id=pk).count()>0\n",
     "        except Exception as e:\n",
     "            print(e)\n",
-    "            return False"
+    "            return True"
    ]
   },
   {
@@ -290,6 +290,121 @@
     "        return True\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Profile.objects.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "exceptions must derive from BaseException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-1fbac30db466>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[1;34m\"sss\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: exceptions must derive from BaseException"
+     ]
+    }
+   ],
+   "source": [
+    "raise \"sss\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module_id=Module.objects.get(module='Section').id\n",
+    "username='admin'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'filter_set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-d876cc846b78>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mscope\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfundamental\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muser_role_permission\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0musername\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'permissions'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmodule_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'scope'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mscope_instance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscope\u001b[0m\u001b[1;31m#Scope.objects.get(id=scope.id)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfilter_set\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscope_instance\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;31m# exec('auto_value='+str(scope_instance.value))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# if isinstance(auto_value, str):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'filter_set'"
+     ]
+    }
+   ],
+   "source": [
+    "scope=fundamental().user_role_permission(username)['permissions'][module_id]['scope']\n",
+    "scope_instance=scope#Scope.objects.get(id=scope.id)\n",
+    "# filter_set=scope_instance.filter_set\n",
+    "# # exec('auto_value='+str(scope_instance.value))\n",
+    "# # if isinstance(auto_value, str):\n",
+    "# #     filter_string=filter_set+'='+'\"'+auto_value+'\"'\n",
+    "# # str1=fundamental().get_class_name(module)+'.objects.filter('+filter_string+')'\n",
+    "# # str1='query_set='+str1\n",
+    "# # print(str1)\n",
+    "# # #  exec(str1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a='user=Profile.objects.all()'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QuerySet [<Profile: admin>]>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
